# vapor-tokens

./: .env  .gitignore  Cargo.toml  README.md  justfile  metadata.json  wallet.redb
anchor/: Anchor.toml  package.json
anchor/migrations/: deploy.ts
anchor/programs/vapor-tokens/: Cargo.toml
anchor/programs/vapor-tokens/src/: lib.rs
anchor/programs/vaportoken-condenser/: Cargo.toml
anchor/programs/vaportoken-condenser/src/: lib.rs  vk.rs
anchor/programs/vaportoken-transfer-hook/: Cargo.toml
anchor/programs/vaportoken-transfer-hook/src/: lib.rs  merkle_tree.rs
anchor/tests/: vapor-tokens.ts  vaportoken-transfer-hook.ts  vaportoken.ts
circuits/condenser/: Nargo.toml  Prover.toml
circuits/condenser/src/: ed25519.nr  hash_to_field.nr  main.nr  merkle.nr
crates/cli/: Cargo.toml  wallet.redb
crates/cli-wallet/: Cargo.toml  wallet.redb
crates/cli-wallet/src/: build_merkle_proof.rs  main.rs  sync.rs
crates/cli-wallet/src/commands/: condense.rs  gen_address.rs  list.rs  mod.rs
crates/cli/src/: borsh_record.rs  condense.rs  main.rs  prove.rs  sync.rs
crates/condenser-witness/: Cargo.toml
crates/condenser-witness/src/: lib.rs
crates/transfer-tree/: Cargo.toml
crates/transfer-tree/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/vaporize-addresses/: Cargo.toml
crates/vaporize-addresses/src/: lib.rs  main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docker/: prove.sh  prover.Dockerfile
docs/: USAGE.md
