[package]
name = "cli-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
transfer-tree = { path = "../../crates/transfer-tree" }
condenser-witness = { path = "../../crates/condenser-witness" }
vaporize-addresses = { path = "../../crates/vaporize-addresses" }

ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
rand = "0.8.5"
clap = { version = "3.2", features = ["derive", "env"] }
anyhow = { version = "1.0.100" }
bs58 = { version = "0.5.1" }
qr2term = { version = "0.3" }
redb = "3.1.0"
solana-client = "3.1.6"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.6"
base64 = "0.22.1"
borsh = { version = "1.6.0", features = ["borsh-derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
light-bounded-vec = "2.0.1"
hex = "0.4.3"
anchor-lang = "0.32.1"
spl-token-2022 = "4.0.0"
solana-program = "2.3.0"
spl-associated-token-account = "8.0.0"
vaportoken-condenser = { path = "../../anchor/programs/vaportoken-condenser", features = ["no-entrypoint"] }
vaportoken-transfer-hook = { path = "../../anchor/programs/vaportoken-transfer-hook", features = ["no-entrypoint"] }
solana-cli-config = "3.1.6"
solana-compute-budget = "3.1.6"
solana-compute-budget-interface = "3.0.0"
solana-sdk-ids = "3.1.0"
shellexpand = "3.1.1"

[dev-dependencies]
tempfile = "3.24.0"
