[package]
name = "vaporize-addresses"
version = "0.1.0"
edition = "2024"
authors = ["Willem Olding <willemolding@gmail.com>"]

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ed25519 = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
light-poseidon = "0.4.0"
rand = "0.8.5"
utils ={ path = "../utils" }


[dev-dependencies]
curve25519-dalek = "4.1.3"
