[package]
name = "vaportoken-condenser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vaportoken_condenser"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.32.1" }
vaportoken-transfer-hook = { path = "../vaportoken-transfer-hook", features = ["no-entrypoint"] }
gnark-verifier-solana = { git = "https://github.com/reilabs/sunspot", rev = "8e61988da7b35add0e1384962f46c46b367235c1" }
utils = { path = "../../../crates/utils" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
