[package]
name = "vaportoken-transfer-hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vaportoken_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["interface-instructions"] }
anchor-spl = "0.32.1"
bytemuck = { version = "1.20.0", features = ["min_const_generics"] }
spl-discriminator = "0.4"
spl-tlv-account-resolution = "0.10.0"
spl-transfer-hook-interface = "0.10.0"
light-hasher = "4.0.0"
thiserror = "2.0.17"
utils = { path = "../../../crates/utils" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
